[gd_scene load_steps=7 format=3 uid="uid://bxithodbbv2wn"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_jkk8d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmklk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g484k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vkqrs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2d5c8"]

[sub_resource type="Theme" id="Theme_vvw41"]
default_font_size = 46
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_focus_color = Color(0.94902, 0.94902, 0, 1)
Button/colors/font_hover_color = Color(0.94902, 0.94902, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 1, 1, 1)
Button/styles/focus = SubResource("StyleBoxEmpty_mmklk")
Button/styles/hover = SubResource("StyleBoxEmpty_g484k")
Button/styles/normal = SubResource("StyleBoxEmpty_vkqrs")
Button/styles/pressed = SubResource("StyleBoxEmpty_2d5c8")

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_jkk8d")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.219608, 0.266667, 0.737255)

[node name="menuGameOver" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -66.0
offset_right = 205.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vvw41")

[node name="paused" type="Label" parent="ColorRect2/menuGameOver"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pausado"

[node name="resume_button" type="Button" parent="ColorRect2/menuGameOver"]
layout_mode = 2
text = "Retomar
"

[node name="quit_button" type="Button" parent="ColorRect2/menuGameOver"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="ColorRect2/menuGameOver/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect2/menuGameOver/quit_button" to="." method="_on_quit_button_pressed"]
